infrastructure/overlays/prod/01-base-config/gateway/external-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: networking-external
spec:
  gatewayClassName: envoy-external
  listeners:
    - name: http-external
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
