infrastructure/overlays/prod/01-base-config/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: networking
spec:
  gatewayClassName: envoy
  listeners:
    - name: https-internal
      hostname: "*.home.voldemota.xyz"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: home-wildcard
            kind: Secret
